# doc-dev-lib

./: .gitignore  Cargo.toml  LIB_PLAN.md  README.md  TEST_SUMMARY.md  db.sqlite  schema.sql  test_data_load.sql
src/: db.rs  error.rs  lib.rs
src/models/: author.rs  document.rs  mod.rs  note.rs  section.rs  subsection.rs
src/ops/: authors.rs  documents.rs  maintenance.rs  mod.rs  notes.rs  sections.rs  subsections.rs
