[package]
name = "doc-dev-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx      = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono"] }
thiserror = "1"
uuid      = { version = "1", features = ["v4"] }
chrono    = { version = "0.4", features = ["serde"] }
serde     = { version = "1", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
